--- a/CovidMed.cfg
+++ b/CovidMed.cfg
@@ -33,12 +33,12 @@
 -K$00400000
 -E"./bin"
 -N"./dcu"
--LE"c:\program files (x86)\borland\delphi7\Projects\Bpl"
--LN"c:\program files (x86)\borland\delphi7\Projects\Bpl"
--U"c:\program files (x86)\borland\delphi7\Lib\Debug"
--O"c:\program files (x86)\borland\delphi7\Lib\Debug"
--I"c:\program files (x86)\borland\delphi7\Lib\Debug"
--R"c:\program files (x86)\borland\delphi7\Lib\Debug"
+-LE"e:\program files (x86)\borland\delphi7\Projects\Bpl"
+-LN"e:\program files (x86)\borland\delphi7\Projects\Bpl"
+-U"e:\program files (x86)\borland\delphi7\Lib\Debug"
+-O"e:\program files (x86)\borland\delphi7\Lib\Debug"
+-I"e:\program files (x86)\borland\delphi7\Lib\Debug"
+-R"e:\program files (x86)\borland\delphi7\Lib\Debug"
 -w-UNSAFE_TYPE
 -w-UNSAFE_CODE
 -w-UNSAFE_CAST
